--- a/.jshintrc
+++ b/.jshintrc
@@ -83,5 +83,8 @@
     "yui"           : false,    // Yahoo User Interface
 
     // Custom Globals
-    "globals"       : {}        // additional predefined global variables
+    // additional predefined global variables
+    "globals"       : {
+        "global": false
+    }
 }
